<resources>
    <string name="app_name">COVID Alert Malta</string>
    <string name="CFBundleDisplayName">COVID Alert Malta</string>
    <string name="loading_view_reload">Reload</string>
    <string name="loading_view_error_title">Error</string>
    <string name="force_update_title">Update required</string>
    <string name="inform_continue_button">Continue</string>
    <string name="inform_send_button_title">Send anonymous data</string>
    <string name="inform_send_thankyou">Thank you</string>
    <string name="inform_send_thankyou_text">You have recorded your positive test result anonymously in the app.\n\nThank you for helping to contain the spread of the coronavirus and for contributing to the health and well-being of those you share your life with and those around you.</string>
    <string name="inform_fertig_button_title">Close</string>
    <string name="handshakes_title_homescreen">Tracing</string>
    <string name="cancel">Cancel</string>
    <string name="push_exposed_title">New message</string>
    <string name="push_exposed_text">Open the app to read the message</string>
    <string name="android_button_ok">OK</string>
    <string name="onboarding_continue_button">Continue</string>
    <string name="onboarding_finish_button">Finish</string>
    <string name="unexpected_error_title">An unexpected error has occurred</string>
    <string name="bluetooth_turned_off">The app is not working because Bluetooth is turned off</string>
    <string name="bluetooth_permission_turned_off">The app is not working because Bluetooth is not permitted</string>
    <string name="NSBluetoothPeripheralUsageDescription">Anonymous codes will be exchanged with nearby phones via low energy Bluetooth.</string>
    <string name="NSBluetoothAlwaysUsageDescription">Anonymous codes will be exchanged with nearby phones via low energy Bluetooth.</string>
    <string name="android_foreground_service_notification_text">Anonymous codes will be exchanged with nearby phones</string>
    <string name="inform_code_title">Enter the Covidcode</string>
    <string name="inform_code_text">Please enter the Covidcode that was given to you; please be careful to enter it accurately.</string>
    <string name="inform_code_no_code">Do you need help?</string>
    <string name="tracing_setting_title">Tracing</string>
    <string name="tracing_setting_text_ios">Allow anonymous tracing</string>
    <string name="bluetooth_setting_tracking_inactive">Tracing deactivated</string>
    <string name="reports_title_homescreen">Reports</string>
    <string name="meldungen_no_meldungen_title">No reports</string>
    <string name="push_deactivated_title">Messages deactivated</string>
    <string name="push_deactivated_text">Change the settings to receive information directly in the event of a report.</string>
    <string name="meldungen_meldung_title">Potential Exposure</string>
    <string name="meldungen_meldung_text">Your phone was close to that of someone who tested positive</string>
    <string name="information_title">Information</string>
    <string name="information_text">Updates on COVID-19 in Malta</string>
    <string name="information_url">https://covid19health.gov.mt</string>
    <string name="tracing_active_title">Tracing active</string>
    <string name="tracing_active_text">Anonymous codes will be exchanged with nearby phones</string>
    <string name="android_gaen_error_title">Tracing not active</string>
    <string name="android_foreground_service_notification_errors">App currently unable to function properly</string>
    <string name="tab_gaen_title">Tracing</string>
    <string name="whattodo_title_symptoms">Symptoms of the disease</string>
    <string name="whattodo_subtitle_symptoms">If you feel unwell</string>
    <string name="whattodo_title_positivetest">What to do if told that you’re positive</string>
    <string name="whattodo_subtitle_positivetest">If positive</string>
    <string name="inform_detail_subtitle">If Positive</string>
    <string name="inform_detail_title">What to do if told that you’re positive</string>
    <string name="inform_detail_box_subtitle">With the Covidcode</string>
    <string name="inform_detail_box_title">Record your result anonymously</string>
    <string name="inform_detail_box_button">Enter the Covidcode</string>
    <string name="inform_detail_box_text">You will be given a Covidcode; please enter it to record your positive result anonymously in the app.</string>
    <string name="symptom_detail_subtitle">What to do if…</string>
    <string name="symptom_detail_title">you feel unwell</string>
    <string name="symptom_detail_box_subtitle">In the case of symptoms…</string>
    <string name="symptom_detail_box_title">Contact your doctor</string>
    <string name="symptom_detail_box_button">Check symptoms</string>
    <string name="symptom_detail_box_text">If you have possible coronavirus symptoms, contact your doctor or the medical emergency service.</string>
    <string name="inform_detail_navigation_title">Tested positive</string>
    <string name="symptom_detail_navigation_title">Symptoms</string>
    <string name="tracing_turned_off_title">Tracing deactivated</string>
    <string name="tracing_turned_off_text">Reactivate tracing to receive codes from phones of persons who may turn out to be positive.</string>
    <string name="bluetooth_turned_off_title">Bluetooth off</string>
    <string name="bluetooth_turned_off_text">Turn on Bluetooth on your device so that anonymous tracing works.</string>
    <string name="bluetooth_turn_on_button_title">Turn on Bluetooth</string>
    <string name="bluetooth_permission_error_title">Bluetooth use declined</string>
    <string name="bluetooth_permission_error_text">Enable the use of Bluetooth so that anonymous tracing works.</string>
    <string name="symptom_detail_corona_check_url">https://deputyprimeminister.gov.mt/en/health-promotion/covid-19/Pages/symptoms.aspx</string>
    <string name="push_open_settings_button">Change settings</string>
    <string name="meldungen_no_meldungen_subtitle">No potential exposure has been reported</string>
    <string name="no_meldungen_box_title">Protect yourself</string>
    <string name="no_meldungen_box_subtitle">What should I do?</string>
    <string name="no_meldungen_box_text">Follow the public health recommendations on how to protect yourself and physical distancing.</string>
    <string name="meldung_detail_positive_tested_title">Tested positive</string>
    <string name="meldung_detail_positive_tested_subtitle">You have tested positive for the new coronavirus.</string>
    <string name="meldung_detail_positive_test_box_subtitle">What do I have to do?</string>
    <string name="meldung_detail_positive_test_box_title">Quarantine</string>
    <string name="meldung_detail_positive_test_box_text">Follow the instructions on quarantine.</string>
    <string name="meldung_detail_positive_test_box_link">Instructions on quarantine</string>
    <string name="meldung_detail_positive_test_box_url">https://deputyprimeminister.gov.mt/en/health-promotion/covid-19/Pages/quarantine.aspx</string>
    <string name="tracing_ended_title">Tracing ended</string>
    <string name="tracing_ended_text">Contact data is no longer being recorded</string>
    <string name="exposed_info_contact_hotline">Helpline 111</string>
    <string name="meldung_homescreen_positive_info_line1">Follow the instructions on quarantine.</string>
    <string name="meldung_homescreen_positive_info_line2">Click to learn more.</string>
    <string name="meldung_detail_exposed_new_meldung">New report</string>
    <string name="meldung_detail_exposed_title">Report of potential exposure</string>
    <string name="meldung_homescreen_positiv_title">Tested positive</string>
    <string name="meldung_detail_exposed_subtitle">On this day, your phone was close to that of someone who tested positive.</string>
    <string name="meldung_homescreen_positiv_text">You have tested positive for the new coronavirus.</string>
    <string name="date_today">Today</string>
    <string name="date_days_ago">{COUNT} days ago</string>
    <string name="meldungen_detail_call">Call Helpline 111</string>
    <string name="meldungen_detail_call_text">Coronavirus infoline (24hrs-a-day)</string>
    <string name="faq_button_title">Frequently Asked Questions</string>
    <string name="inform_detail_faq1_title">What is a Covidcode?</string>
    <string name="inform_detail_faq1_text">People who test positive for the new coronavirus are given a Covidcode.  This ensures that only someone who tests positive can record a positive result in the app and anonymously inform their contacts.</string>
    <string name="inform_detail_faq2_title">How do I remain anonymous?</string>
    <string name="inform_detail_faq2_text">Only encrypted (secret) codes are recorded and sent by the app.  There are no personal data.  Other phones with the same or similar apps check whether they were close to your phone in the past few days and notify their users, without ever identifying you.</string>
    <string name="symptom_faq1_title">Unsure about symptoms?</string>
    <string name="symptom_faq1_text">You have symptoms but are unsure what you should do? Answer the questions to receive advice on what to do.</string>
    <string name="android_accessibility_back_button">Back</string>
    <string name="onboarding_disclaimer_legal_button">Privacy Policy</string>
    <string name="onboarding_language_title_en">Select a Language</string>
    <string name="onboarding_language_title_mt">Agħżel Lingwa</string>
    <string name="onboarding_language_button_text_en">English</string>
    <string name="onboarding_language_button_text_mt">Malti</string>
    <string name="interop_mode_title">Cross-border Data Exchange</string>
    <string name="interop_mode_title_bold"><b>Cross-border Data Exchange</b></string>
    <string name="interop_mode_description">COVID Alert Malta can exchange exposure notifications with contact tracing apps of other EU and European Economic Area (EEA) countries of your choice. Enabling this feature means that you could be warned of potential exposure to COVID-19 should you have come in contact with an infected user of another European contact tracing app whilst in Malta or abroad.</string>
    <string name="interop_mode_unavailable_bold"><b>Cross-border data exchange is currently unavailable</b></string>
    <string name="interop_mode_instructions">Select your preferred cross-border data exchange option.</string>
    <string name="interop_mode_instructions_bold"><b>Select your preferred cross-border data exchange option.</b></string>
    <string name="interop_mode_disabled_title">No Cross-border Data Exchange</string>
    <string name="interop_mode_disabled_text">Do not exchange exposure notifications with other contact tracing apps of countries within the European Union and European Economic Area (EEA).</string>
    <string name="interop_mode_countries_title">Selected Countries Only</string>
    <string name="interop_mode_countries_text">Exchange exposure notifications with contact tracing apps of your selected EU and European Economic Area (EEA) countries only.</string>
    <string name="interop_mode_countries_text_selection">Select Countries</string>
    <string name="interop_mode_eu_title">EU and European Economic Area (EEA)</string>
    <string name="interop_mode_eu_text">Exchange exposure notifications with users of all compatible contact tracing apps of countries in the European Union and European Economic Area (EEA).</string>
    <string name="preferences_general"><b>General Preferences</b></string>
    <string name="preferences_language_title">Language</string>
    <string name="preferences_language_modal_title">Select your preferred language</string>
    <string name="preferences_wifi_sync_title">WiFi Sync Option</string>
    <string name="preferences_wifi_sync_summary">Synchronise only when connected to WiFi</string>
</resources>