<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/interop_mode_title_bold">
        <Preference
            app:iconSpaceReserved="false"
            app:persistent="false"
            app:selectable="false"
            app:summary="@string/interop_mode_description" />
        <Preference
            app:icon="@drawable/ic_launch_theme"
            app:key="preferences_static_privacy"
            app:title="@string/onboarding_disclaimer_legal_button" />
        <Preference
            app:icon="@drawable/ic_launch_theme"
            app:key="preferences_static_faq"
            app:title="@string/faq_button_title" />
        <Preference
            app:iconSpaceReserved="false"
            app:persistent="false"
            app:selectable="false"
            app:summary="@string/interop_mode_instructions_bold" />
        <Preference
            app:icon="@drawable/ic_warning_theme"
            app:isPreferenceVisible="false"
            app:key="preferences_static_eu_disabled"
            app:persistent="false"
            app:selectable="false"
            app:summary="@string/interop_mode_unavailable_bold" />
        <SwitchPreference
            app:iconSpaceReserved="false"
            app:key="preferences_covid_interop_eu"
            app:summary="@string/interop_mode_eu_text"
            app:title="@string/interop_mode_eu_title" />
        <SwitchPreference
            app:iconSpaceReserved="false"
            app:key="preferences_covid_interop_countries"
            app:summary="@string/interop_mode_countries_text"
            app:allowDividerAbove="true"
            app:title="@string/interop_mode_countries_title" />
        <MultiSelectListPreference
            app:dialogTitle="@string/interop_mode_countries_text_selection"
            app:icon="@drawable/ic_launch_blue"
            app:key="preferences_covid_interop_countries_selection"
            app:isPreferenceVisible="false"
            app:title="@string/interop_mode_countries_text_selection" />
        <SwitchPreference
            app:iconSpaceReserved="false"
            app:key="preferences_covid_interop_malta"
            app:allowDividerAbove="true"
            app:summary="@string/interop_mode_disabled_text"
            app:title="@string/interop_mode_disabled_title"
            app:singleLineTitle="false"/>
    </PreferenceCategory>
</PreferenceScreen>