<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/preferences_general">
        <ListPreference
            app:dialogTitle="@string/preferences_language_modal_title"
            app:entries="@array/settings_languages"
            app:entryValues="@array/settings_languages_values"
            app:iconSpaceReserved="false"
            app:key="preferences_language"
            app:title="@string/preferences_language_title"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="preferences_wifi_sync"
            app:summary="@string/preferences_wifi_sync_summary"
            app:title="@string/preferences_wifi_sync_title" />
    </PreferenceCategory>
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/interop_mode_title_bold">
        <Preference
            app:iconSpaceReserved="false"
            app:key="preferences_exposure_data_method"
            app:summary="@string/interop_mode_instructions"
            app:title="@string/interop_mode_title" />
    </PreferenceCategory>
</PreferenceScreen>