<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020 Ubique Innovation AG <https://www.ubique.ch>
  ~
  ~ This Source Code Form is subject to the terms of the Mozilla Public
  ~ License, v. 2.0. If a copy of the MPL was not distributed with this
  ~ file, You can obtain one at https://mozilla.org/MPL/2.0/.
  ~
  ~ SPDX-License-Identifier: MPL-2.0
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_light"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/wtd_symptoms_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationContentDescription="@string/android_accessibility_back_button"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/symptom_detail_navigation_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_larger"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                style="@style/NextStep.Text.Bold.Purple"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/symptom_detail_subtitle" />

            <TextView
                style="@style/NextStep.Text.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_medium_large"
                android:gravity="center_horizontal"
                android:text="@string/symptom_detail_title" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                android:src="@drawable/ill_symptome_detail" />

            <androidx.cardview.widget.CardView
                style="@style/NextStep.Card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_medium_large"
                android:layout_marginTop="-20dp"
                android:layout_marginEnd="@dimen/spacing_medium_large"
                android:elevation="@dimen/card_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:foreground="?selectableItemBackground"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/spacing_larger"
                    android:paddingTop="@dimen/spacing_medium_large"
                    android:paddingRight="@dimen/spacing_larger"
                    android:paddingBottom="@dimen/spacing_medium_large">

                    <TextView
                        style="@style/NextStep.Text.SubTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/symptom_detail_box_subtitle"
                        android:textColor="@color/purple_main" />

                    <TextView
                        style="@style/NextStep.Text.Title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_tiny_small"
                        android:layout_marginBottom="@dimen/spacing_tiny_small"
                        android:text="@string/symptom_detail_box_title" />

                    <TextView
                        style="@style/NextStep.Text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/symptom_detail_box_text" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey_light"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingStart="@dimen/spacing_large"
                android:paddingTop="@dimen/spacing_medium_large"
                android:paddingEnd="@dimen/spacing_large"
                android:paddingBottom="@dimen/spacing_medium_large">

                <TextView
                    style="@style/NextStep.Text.Bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:text="@string/symptom_faq1_title" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:layout_marginEnd="@dimen/spacing_medium"
                        android:src="@drawable/ic_check_circle"
                        android:tint="@color/purple_main" />

                    <TextView
                        style="@style/NextStep.Text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:breakStrategy="high_quality"
                        android:hyphenationFrequency="full"
                        android:text="@string/symptom_faq1_text" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/wtd_symptoms_check_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/spacing_small"
                    android:paddingBottom="@dimen/spacing_small">

                    <ImageView
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:layout_marginEnd="@dimen/spacing_small"
                        android:src="@drawable/ic_launch"
                        android:tint="@color/purple_main" />

                    <TextView
                        style="@style/NextStep.Text.Bold.Purple"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/symptom_detail_box_button" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/wtd_symptoms_faq_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_small"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/spacing_small"
                    android:paddingBottom="@dimen/spacing_small">

                    <ImageView
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:layout_marginEnd="@dimen/spacing_small"
                        android:src="@drawable/ic_launch"
                        android:tint="@color/purple_main" />

                    <TextView
                        style="@style/NextStep.Text.Bold.Purple"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/faq_button_title" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>